--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dom-to-image-more": "^3.5.0",
+    "fabric": "^6.6.1",
     "framer-motion": "^12.5.0",
     "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.8",
+    "konva": "^9.3.19",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-konva": "^19.0.3",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-image": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
