--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html2canvas-pro": "^1.5.8",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
+    "next-cloudinary": "^6.16.0",
     "next-intl": "4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
