--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "shadcn": "pnpm dlx shadcn@latest add"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
@@ -26,6 +27,7 @@
     "next-cloudinary": "^6.16.0",
     "next-intl": "4",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.1",
