--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
     "html2canvas-pro": "^1.5.8",
     "lucide-react": "^0.479.0",
+    "motion": "^12.6.3",
     "next": "15.2.2",
     "next-cloudinary": "^6.16.0",
     "next-intl": "4",
