--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "docker:logs": "docker logs chinchinbooth-container",
     "docker:restart": "npm run docker:stop && npm run docker:build && npm run docker:run",
     "docker:status": "docker ps -a | grep chinchinbooth-container",
-    "docker:image-clean": "docker image prune -f --filter label=chinchinbooth"
+    "docker:image-clean": "docker image prune -f --filter label=chinchinbooth",
+    "update-version": "sh scripts/update-version.sh"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
