--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "context-filter-polyfill": "^0.3.22",
     "framer-motion": "^12.5.0",
     "html2canvas-pro": "^1.5.8",
     "lucide-react": "^0.479.0",
